[gd_scene load_steps=2 format=3 uid="uid://dnwnj8c70h3cr"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_4jcg3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4jcg3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0830862, 0.605865, 1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3

[node name="Buttons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Start" type="Button" parent="CenterContainer/Buttons"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="CenterContainer/Buttons"]
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="CenterContainer/Buttons"]
layout_mode = 2
text = "Credits"

[node name="Exit" type="Button" parent="CenterContainer/Buttons"]
layout_mode = 2
text = "Exit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 100.0
offset_right = 113.0
offset_bottom = 140.0
grow_horizontal = 2
text = "Legendary bubblegum quest"

[connection signal="pressed" from="CenterContainer/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/Exit" to="." method="_on_exit_pressed"]
